ポートフォリオ_iwasawa18

--- a/banner_01.html
+++ b/banner_01.html
@@ -466,7 +466,7 @@ window.addEventListener(
           reachedMax = true;
 
           if (overscrollCount === 3) {
-            window.location.href = "nextpage.html";
+            window.location.href = "works_all.html";
           }
         } else if (overscroll < maxExtra) {
           reachedMax = false;
