ポートフォリオ_iwasawa18

--- a/banner_01.html
+++ b/banner_01.html
@@ -403,6 +403,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
           atBottom = scrollY + winHeight >= docHeight - 1;
         });
 
+        //スクロール４回目で画面遷移
        let overscrollCount = 0; // カウンター
 let reachedMax = false; // maxExtra到達フラグ
 
