ポートフォリオ_19

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                   仮想のヘアサロンサイトをデザインしました。コーポレートカラーのピンクを基調に、お店の雰囲気や人が感じられるサイトに仕上げました。
                 </p>
                 <p class="works_sub_category02">[ Category : design ]</p>
-                <a class="works_btn02" href="works_hairsalon.html"
+                <a class="works_btn02" href="web_site02.html"
                   ><span class="works_btn_span">View more</span></a
                 >
               </div>
