--- a/web_site02.html
+++ b/web_site02.html
@@ -9,14 +9,12 @@
     <link rel="stylesheet" href="./css/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- あしらいにアニメーションをつけるために以下を読み込む -->
-    <script src="
-https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
-"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js"></script>
     <!-- 下スクロールのためのgsap cdn -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
   </head>
-  <body class="works_banner01">
+  <body class="works_website01">
     <!-- カーソルの見た目を変更 -->
     <div id="cursor"></div>
     <div id="stalker"></div>
@@ -80,55 +78,168 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
     <div class="scroll_down no_scroll">
       <p>SCROLL</p>
     </div>
+    <!-- WORKS WEBSITE02 紹介ページ内容 -->
+    <main class="site_main">
+      <!-- あしらい8-->
+      <div class="roop_wrapper08">
+        <!-- <img
+          class="roop_design08"
+          src="./images/1x/roop_design08.svg"
+          alt="∞マークの装飾"
+        /> -->
+        <svg
+          id="layer08"
+          class="roop_design08"
+          data-name="レイヤー 2"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 1302.01 965.23"
+        >
+          <defs>
+            <style>
+              .roop08-1,
+              .roop08-2 {
+                fill: none;
+              }
 
-    <!-- WORKS BANNER01 紹介ページ内容 -->
-    <main class="banner_wrapper">
-      <section>
-        <p>#Webbanner</p>
-        <h3>夏限定アイスクリーム</h3>
+              .roop08-2 {
+                stroke: url(#_名称未設定グラデーション_126);
+                stroke-miterlimit: 10;
+              }
 
-        <div class="banner_img">
-          <img src="./images/1x/works_banner01-80.jpg" alt="バナー作品の画像" />
+              .roop08-3 {
+                clip-path: url(#clippath08);
+              }
+            </style>
+            <clipPath id="clippath08">
+              <rect class="roop08-1" width="1302.01" height="965.23" />
+            </clipPath>
+            <linearGradient
+              id="_名称未設定グラデーション_126"
+              data-name="名称未設定グラデーション 126"
+              x1="64.53"
+              y1="577.09"
+              x2="1378.81"
+              y2="464.13"
+              gradientUnits="userSpaceOnUse"
+            >
+              <stop offset="0" stop-color="#181e4d" />
+              <stop offset=".57" stop-color="#5a95b4" />
+              <stop offset="1" stop-color="#8aecff" />
+            </linearGradient>
+          </defs>
+          <g id="_編集_ワイヤーフレーム" data-name="編集_ワイヤーフレーム">
+            <g class="roop08-3">
+              <path
+                class="roop08-2"
+                d="M1330.96,104.89c-131.83,114.47-231.17,260.87-345.93,392.45-95.64,109.66-203.27,210.09-326.84,286.91-123.57,76.83-263.81,129.54-408.93,140.16-42.01,3.08-87.85,4.57-122.45-23.41-23.85-19.28-39.02-48.9-40.73-79.52-2.31-41.42,19.41-81.53,50.06-109.49,89.61-81.74,238.32-91.22,352.9-105.63,134.13-16.86,267.31-30.93,399.45-59.83,131.58-28.78,261.46-65.33,388.74-109.4,32.14-11.13,64.33-22.43,96.17-34.33"
+              />
+            </g>
+          </g>
+        </svg>
+      </div>
+      <section class="site_wrapper01">
+        <p>#Website</p>
+        <h3>Re LIFE様</h3>
+
+        <div class="site_img">
+          <video
+            src="./images/1x/works_hairsalon.mov"
+            playsinline
+            autoplay
+            muted
+          ></video>
         </div>
 
-        <p class="banner_sub_category">[ Category : design ]</p>
+        <p class="site_sub_category">[ Category : design ]</p>
 
-        <p class="banner_discription">
-          夏の青空と白い雲を背景に、期間限定アイスクリームの魅力を伝える販促バナーです。サンライズオレンジとプレミアムピスタチオ、2種類のフレーバーを鮮やかな色合いで際立たせ、季節感と特別感を表現しました。キャッチコピーには視認性の高い英字フォントを用い、販売期間（7〜9月）を明確に記載することで、期間限定の魅力を強調しています。
-        </p>
+        <p class="site_discription">
+          「洗練された印象と親しみやすさの両立」をテーマに、配色は落ち着いたトーンを基調にしつつ、アクセントカラーで温かみを加えています。お客さまに「なりたい自分」をイメージしてもらいやすいよう、写真を大きく・バランス良く配置するよう工夫しました。また、余白を活かしたレイアウトにすることで、全体の見やすさと清潔感を意識しています。
 
-        <div class="banner_flex">
+        <div class="site_flex">
           <p>Point</p>
-          <div class="banner_inner">
+          <div class="site_inner">
             <p>
-              夏らしい爽やかな雰囲気を背景に取り入れ、フレーバーの色味を最大限引き立てる構図にしました。英字キャッチと手書き風の日本語コピーを組み合わせ、特別感と親しみやすさの両立を意識しています。
+              「心地よさをまとえる空間」というコンセプトを視覚的に表現しました。女性らしい柔らかと上質感を兼ね備えた配色と余白設計で、店舗の魅力を最大限引き出しました。また、シンプルな構成にすることで情報が整理され、予約やメニュー確認などの行動にスムーズにつながるように設計しています。
             </p>
             <p>
-              休日にスイーツやカフェ巡りを楽しむ20〜40代女性を想定。SNS映えを意識し、写真としても楽しめるビジュアル構成としました。
+              20〜40代の女性をメインターゲットに想定しています。その中でも特に、「落ち着いたサロンに通いたい」「自分だけの空間で施術を受けたい」「上質で丁寧な接客を重視する」等の価値観をもつ層に向けたデザインです。落ち着いた中にも凛とした華やさを感じられるよう、上品にまとめることを意識しました。
             </p>
           </div>
         </div>
-        <p class="tool">【 Tool : Adobe Illustrator,Photoshop 】</p>
+        <!-- サイトへの遷移ボタン -->
+        <!-- <div class="site_launch_btn">
+          <a href="index.html">
+            <img src="./images/1x/works_site_btn.svg" alt="ボタンの画像" />
+            <p><span class="site_btn_span">Launch Website</span></p>
+          </a>
+        </div> -->
+
+        <!-- ページ毎の画像　PC -->
+        <div class="site_page_img00">
+          <img src="./images/1x/works_site02_01@3x-80.jpg" alt="作品の画像" />
+        </div>
+
+        <div class="site_page_img">
+          <img src="./images/1x/works_site02_02-80.jpg" alt="作品の画像" />
+        </div>
+
+        <div class="site_page_img">
+          <img src="./images/1x/works_site02_03-80.jpg" alt="作品の画像" />
+        </div>
+
+          <div class="site_page_img">
+          <img src="./images/1x/works_site02_04-80.jpg" alt="作品の画像" />
+        </div>
+
+        <div class="site_page_img">
+          <img src="./images/1x/works_site02_05-80.jpg" alt="作品の画像" />
+        </div>
       </section>
 
-      <div class="works_banner_bar">
+      <!-- ページ毎の画像　SP -->
+      <section class="site_wrapper02">
+        <div class="site_page_flex">
+          <div class="site_pageSP_img">
+            <img src="./images/1x/works_site02_06@3x-80.jpg" alt="作品の画像" />
+          </div>
+          <div class="site_pageSP_img">
+            <img src="./images/1x/works_site02_07@2x-80.jpg" alt="作品の画像" />
+          </div>
+          <div class="site_pageSP_img site_gap_hidden">
+            <img src="./images/1x/works_site02_08@2x-80.jpg" alt="作品の画像" />
+          </div>
+          <div class="site_pageSP_img site_gap">
+            <img src="./images/1x/works_site02_09@2x-80.jpg" alt="作品の画像" />
+          </div>
+          <div class="site_pageSP_img site_gap">
+            <img src="./images/1x/works_site02_10@2x-80.jpg" alt="作品の画像" />
+          </div>
+          <div class="site_pageSP_img site_gap">
+            <img src="./images/1x/works_site02_11@2x-80.jpg" alt="作品の画像" />
+          </div>
+        </div>
+      </section>
+
+      <div class="site_banner_bar">
         <p>Works all</p>
         <div></div>
       </div>
     </main>
 
-    <!-- <フッター> --><a href="works_all.html">
+    <!-- <フッター> -->
+     <a href="works_all.html">
     <footer id="c-form" class="works_banner_footer">
-      <!-- あしらい6 -->
-      <div class="roop_wrapper06">
+      <!-- あしらい7 -->
+      <div class="roop_wrapper07">
         <!-- <img
-          class="roop_design06"
+          class="roop_design07"
           src="./images/1x/roop_design06.svg"
           alt="∞マークの装飾"
         /> -->
         <svg
-          id="layer06"
-          class="roop_design06"
+          id="layer07"
+          class="roop_design07"
           data-name="レイヤー 2"
           xmlns="http://www.w3.org/2000/svg"
           xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -136,23 +247,23 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
         >
           <defs>
             <style>
-              .roop06-1,
-              .roop06-2 {
+              .roop07-1,
+              .roop07-2 {
                 fill: none;
               }
 
-              .roop06-2 {
+              .roop07-2 {
                 stroke: url(#_名称未設定グラデーション_12);
                 stroke-miterlimit: 10;
                 stroke-width: 1.1px;
               }
 
-              .roop06-3 {
-                clip-path: url(#clippath06);
+              .roop07-3 {
+                clip-path: url(#clippath07);
               }
             </style>
-            <clipPath id="clippath06">
-              <rect class="roop06-1" width="1340.42" height="1032.19" />
+            <clipPath id="clippath07">
+              <rect class="roop07-1" width="1340.42" height="1032.19" />
             </clipPath>
             <linearGradient
               id="_名称未設定グラデーション_12"
@@ -176,9 +287,9 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
             </linearGradient>
           </defs>
           <g id="_編集_ワイヤーフレーム" data-name="編集_ワイヤーフレーム">
-            <g class="roop06-3">
+            <g class="roop07-3">
               <path
-                class="roop06-2"
+                class="roop07-2"
                 d="M-67-22C72,107.78,165.94,259.67,281.19,401.37c96.06,118.09,208.29,230.31,344.07,324.55,135.78,94.24,296.07,170.17,469.85,209.23,50.31,11.31,105.53,21.97,152.46,3.84,32.34-12.49,56.03-36.06,63.61-63.25,10.25-36.79-8.83-77.29-40.9-108.67-93.78-91.75-272.11-130.51-408.23-166.77-159.35-42.44-318.04-82.17-472.82-135.04-154.12-52.64-304.78-111.93-450.94-177.45-36.9-16.54-73.84-33.26-110.24-50.44"
               />
             </g>
@@ -193,7 +304,6 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
           src="./images/1x/scroll_circle.svg"
           alt="半円のデザイン"
         /> -->
-
           <svg
             id="half-circle"
             class="scroll_circle"
@@ -232,7 +342,6 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
                 <stop offset="1" stop-color="#181e4d" />
               </linearGradient>
             </defs>
-
             <g id="circle" data-name="編集_ワイヤーフレーム">
               <g class="cls-2">
                 <path
@@ -242,15 +351,14 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
                 />
               </g>
             </g>
-          </svg>
-        </div>
-      </a>
+          </svg></div
+      ></a>
     </footer>
 
     <!-- 共通：jquery -->
     <script>
       //メールアイコンをふわっと表示させて一定の場所で非表示、上スクロールで再表示
-     document.addEventListener("DOMContentLoaded", function () {
+      document.addEventListener("DOMContentLoaded", function () {
         const pageTop = document.querySelector("#mail");
         const form = document.querySelector("#c-form");
         // const scrollThreshold = 100;
@@ -277,7 +385,6 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
         pageTop.addEventListener("click", scrollTop);
         window.addEventListener("scroll", handleScroll);
       });
-
 
       //カーソルの見た目を変更
       var cursor = $("#cursor");
@@ -320,7 +427,6 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
       });
 
       //バーガーメニュー
-
       $(function () {
         $(".works_banner_sp_btn").on("click", function () {
           // メニュー閉じたり開いたり
@@ -332,7 +438,6 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
 
           $(".mail_icon").toggleClass("invisible");
           $(".scroll_down").toggleClass("invisible");
-          $(".works_banner_bar").toggleClass("invisible");
         });
         //リンク飛んだ後元通りにする
         $(".works_banner_sp_header_list_item a").on("click", function () {
@@ -342,31 +447,51 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
 
           $(".mail_icon").removeClass("invisible");
           $(".scroll_down").removeClass("invisible");
-          $(".works_banner_bar").removeClass("invisible");
         });
       });
-
-      //あしらい3
-      const vivus06 = new Vivus("layer06", {
+      //あしらい7
+      const vivus07 = new Vivus("layer07", {
         duration: 350,
         start: "autostart",
         type: "scenario",
         pathTimingFunction: Vivus.EASE_OUT,
       });
 
-      function playForward06() {
-        vivus06.play(1, function () {
-          setTimeout(playBackward06, 350);
+      function playForward07() {
+        vivus07.play(1, function () {
+          setTimeout(playBackward07, 350);
         });
       }
 
-      function playBackward06() {
-        vivus06.play(-1, function () {
-          setTimeout(playForward06, 350);
+      function playBackward07() {
+        vivus07.play(-1, function () {
+          setTimeout(playForward07, 350);
         });
       }
 
-      playForward06();
+      playForward07();
+
+      //あしらい8
+      const vivus08 = new Vivus("layer08", {
+        duration: 350,
+        start: "autostart",
+        type: "scenario",
+        pathTimingFunction: Vivus.EASE_OUT,
+      });
+
+      function playForward08() {
+        vivus08.play(1, function () {
+          setTimeout(playBackward08, 350);
+        });
+      }
+
+      function playBackward08() {
+        vivus08.play(-1, function () {
+          setTimeout(playForward08, 350);
+        });
+      }
+
+      playForward08();
 
       //フッターのぐにょーん
       // プラグインの登録
@@ -403,7 +528,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
           atBottom = scrollY + winHeight >= docHeight - 1;
         });
 
-        //スクロール４回目で画面遷移
+ //スクロール４回目で画面遷移
        let overscrollCount = 0; // カウンター
 let reachedMax = false; // maxExtra到達フラグ
 
@@ -430,7 +555,6 @@ window.addEventListener(
 );
 
         // window.addEventListener(
-        //   // PC：スクロール操作
         //   "wheel",
         //   (e) => {
         //     if (atBottom && e.deltaY > 0) {
@@ -451,6 +575,7 @@ window.addEventListener(
           },
           { passive: true }
         );
+        
 //SP版スクロールで画面遷移を試すため
 window.addEventListener(
   "touchmove",
@@ -477,7 +602,6 @@ window.addEventListener(
   },
   { passive: true }
 );
-//スクロールで画面遷移を試すために、一旦削除
         // window.addEventListener(
         //   "touchmove",
         //   (e) => {
