--- a/works_all.html
+++ b/works_all.html
@@ -114,7 +114,7 @@
             </div>
 
             <div class="flex_item card">
-              <a href="#"
+              <a href="web_site02.html"
                 ><img
                   class="flex_item_img"
                   src="./images/1x/works_all02@2x-80.jpg"
