--- a/works_all.html
+++ b/works_all.html
@@ -208,7 +208,7 @@
         </div>
 
         <div class="flex_02">
-          <div class="flex_02_inner">
+          <div class="flex_02_inner works_hidden">
             <div class="title_flex">
               <p class="works_all_title">#Webbanner</p>
               <p>夏限定アイスクリーム</p>
@@ -225,7 +225,7 @@
             <p class="works_all_category">[ Category : design ]</p>
           </div>
 
-          <div class="flex_02_inner">
+          <div class="flex_02_inner works_hidden">
             <div class="title_flex">
               <p class="works_all_title">#Website</p>
               <p>DESIGN CAFE 様</p>
@@ -247,10 +247,10 @@
               <p>新作ハンバーガー</p>
             </div>
             <div class="flex_item card">
-              <a href="#"
+              <a href="banner_02.html"
                 ><img
                   class="flex_item_img"
-                  src="./images/1x/works_all06-80.jpg"
+                  src="./images/1x/works_all_pophbg-80.jpg"
                   alt="作品の画像6"
               /></a>
             </div>
@@ -263,7 +263,7 @@
               <p>新作ハンバーガー</p>
             </div>
             <div class="flex_item card">
-              <a href="#"
+              <a href="banner_03.html"
                 ><img
                   class="flex_item_img"
                   src="./images/1x/works_all07-80.jpg"
