ポートフォリオ_完成

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                   仮想のカフェサイトを制作しました。レスポンシブ対応で、スマートフォンからPCまで快適に閲覧できるよう設計しています。また、jQueryを活用し、スクロールやボタン操作にアニメーションを取り入れることで、サイト全体にやさしい動きを加え心地よく閲覧できる工夫をこらしました。
                 </p>
                 <p class="works_sub_category03">[ Category : coding ]</p>
-                <a class="works_btn" href="works_cafesite.html"
+                <a class="works_btn" href="website_03.html"
                   ><span class="works_btn_span">View more</span></a
                 >
               </div>
