バージョンアップ20260111

--- a/banner_01.html
+++ b/banner_01.html
@@ -85,26 +85,37 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
     <main class="banner_wrapper">
       <section>
         <p>#Webbanner</p>
-        <h3>夏限定アイスクリーム</h3>
+        <h3>美容液広告バナー</h3>
 
         <div class="banner_img">
-          <img src="./images/1x/works_banner01-80.jpg" alt="バナー作品の画像" />
+          <img src="./images/1x/works_banner02.jpg" alt="バナー作品の画像" />
         </div>
 
         <p class="banner_sub_category">[ Category : design ]</p>
 
         <p class="banner_discription">
-          夏の青空と白い雲を背景に、期間限定アイスクリームの魅力を伝える販促バナーです。サンライズオレンジとプレミアムピスタチオ、2種類のフレーバーを鮮やかな色合いで際立たせ、季節感と特別感を表現しました。キャッチコピーには視認性の高い英字フォントを用い、販売期間（7〜9月）を明確に記載することで、期間限定の魅力を強調しています。
+        「Clarea U」（架空ブランド）の新作美容液の広告バナーを作成。</br>
+        「朝のひと塗りで、透明感とツヤを」というコピーに合わせ、
+柔らかい自然光・白を基調とした配色・グリーンのあしらいで
+清潔感と軽やかさを表現。
+視覚的に“朝使いたくなる美容液”を伝えることを意識しています。
         </p>
 
         <div class="banner_flex">
           <p>Point</p>
           <div class="banner_inner">
             <p>
-              夏らしい爽やかな雰囲気を背景に取り入れ、フレーバーの色味を最大限引き立てる構図にしました。英字キャッチと手書き風の日本語コピーを組み合わせ、特別感と親しみやすさの両立を意識しています。
+              背景や装飾はあくまで引き立て役に徹し、
+最初にボトル → 次にコピー → CTAへと
+視線が流れる構図に設計しました。
+商品の透明感・ツヤ感がしっかり伝わるよう、
+コントラストと余白のバランスを調整しています。
             </p>
+          
             <p>
-              休日にスイーツやカフェ巡りを楽しむ20〜40代女性を想定。SNS映えを意識し、写真としても楽しめるビジュアル構成としました。
+               CTAボタンはグリーン系で全体のトーンと統一し、
+「今すぐ見る」と行動を促しつつも
+強すぎない圧になるよう丸み・グラデーションで仕上げています。
             </p>
           </div>
         </div>
