--- a/works_all.html
+++ b/works_all.html
@@ -124,13 +124,13 @@
             <p class="works_all_category">[ Category : design ]</p>
             <div class="title_flex">
               <p class="works_all_title">#Webbanner</p>
-              <p>夏限定アイスクリーム</p>
+              <p>美容液広告バナー</p>
             </div>
             <div class="flex_item card">
               <a href="banner_01.html"
                 ><img
                   class="flex_item_img"
-                  src="./images/1x/works_all03@2x-80.jpg"
+                  src="./images/1x/works_all03@3x-80.jpg"
                   alt="作品の画像3"
               /></a>
             </div>
